Modified .html and .css templates

--- a/group/templates/delete_group.html
+++ b/group/templates/delete_group.html
@@ -3,14 +3,19 @@
     <title>Delete group</title>
 {% endblock %}
 {% block body %}
+    <div class="container">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
     <div class="label-mine">
         <h1>Delete group {{ group.group_name }}</h1>
     </div>
-    <div class="basic-mine">
+    <div class="message">
         <form action="" method="post">{% csrf_token %}
             <p>Are you sure you want to delete {{ object }}?</p>
             <button type="submit" class="btn btn-danger">Yes, delete it</button>
             <button type="reset" class="btn btn-default" onclick="location.href='{% url 'groups:groups' %}'">No, don't delete it</button>
         </form>
+    </div>
+    </div>
     </div>
 {% endblock %}
