--- a/student/templates/students_info.html
+++ b/student/templates/students_info.html
@@ -3,15 +3,55 @@
     <title>Information</title>
 {% endblock %}
 {% block body %}
+    <div class="container">
     <div class="label-mine">
-        <h1>Information about student {{ student.last_name }}</h1>
+            <h1>Information about student {{ student.last_name }}</h1>
+        </div>
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+        <table class="table table-bordered">
+            <tr class="active">
+                <td>Last name:</td>
+                <td>{{ student.last_name }}</td>
+            </tr>
+            <tr class="active">
+                <td>First name:</td>
+                <td>{{ student.first_name }}</td>
+            </tr>
+            <tr class="active">
+                <td>Middle name:</td>
+                <td>{{ student.middle_name }}</td>
+            </tr>
+            <tr class="active">
+                <td>Year of birth:</td>
+                <td>{{ student.year_of_birth }}</td>
+            </tr>
+            <tr class="active">
+                <td>Student's id:</td>
+                <td>{{ student.student_id }}</td>
+            </tr>
+            <tr class="active">
+                <td>Group:</td>
+                <td>{{ student.group }}</td>
+            </tr>
+        </table>
+{#    <div class="col-md-1"></div>#}
+{#    <div class="col-md-10">#}
+{#        <div class="basic-mine">#}
+{#            <p>Last name: {{ student.last_name }}</p>#}
+{#            <p>First name: {{ student.first_name }}</p>#}
+{#            <p>Middle name: {{ student.middle_name }}</p>#}
+{#            <p>Year of birth: {{ student.year_of_birth }}</p>#}
+{#            <p>Student id: {{ student.student_id }}</p>#}
+{#            <p>Group: {{ student.group }}</p>#}
+{#        </div>#}
+{#    </div>#}
+{#    <div class="col-md-1"></div>#}
+        <div class="text-center">
+            <button type="button" class="btn btn-default" onclick="location.href='{% url 'students:update' student.id %}'">Update</button>
+            <button type="button" class="btn btn-danger" onclick="location.href='{% url 'students:delete' student.id %}'">Delete</button>
+        </div>
     </div>
-    <div class="basic-mine">
-        <p>Last name: {{ student.last_name }}</p>
-        <p>First name: {{ student.first_name }}</p>
-        <p>Middle name: {{ student.middle_name }}</p>
-        <p>Year of birth: {{ student.year_of_birth }}</p>
-        <p>Student id: {{ student.student_id }}</p>
-        <p>Group: {{ student.group }}</p>
+    <div class="col-md-4"></div>
     </div>
 {% endblock %}
