--- a/group/templates/groups_info.html
+++ b/group/templates/groups_info.html
@@ -3,27 +3,34 @@
     <title>Information</title>
 {% endblock %}
 {% block body %}
+    <div class="container">
     <div class="label-mine">
         <h1>Students in {{ group.group_name }}</h1>
     </div>
-    <div class="basic-mine">
-    <table class="table" border = "1">
-        <tr>
-            <th>Student's id</th>
-            <th>Student's last name</th>
-            <th>Student's first name</th>
-            <th>Student's middle name</th>
-            <th></th>
-        </tr>
-        {% for student in group.student_set.all %}
-            <tr>
-                <td>{{ student.student_id }}</td>
-                <td>{{ student.last_name }}</td>
-                <td>{{ student.first_name }}</td>
-                <td>{{ student.middle_name }}</td>
-             <td><button type="button" class="btn btn-info" onclick="location.href='{% url 'students:info' student.id %}'">View</button></td>
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+{#    <div class="col-md-1"></div>#}
+{#    <div class="col-md-10">#}
+    <table class="table table-bordered">
+            <tr class="warning">
+                <th>Student's id</th>
+                <th>Student</th>
             </tr>
+        {% for student in group.student_set.all %}
+            <tr class="active">
+                    <td>{{ student.student_id }}</td>
+                    <td><a href="{% url 'students:info' student.id %}">{{ student.first_name }} {{ student.last_name }} {{ student.middle_name }}</a></td>
+            </tr>
+{#            <p>id {{ student.student_id }}: <a href="{% url 'students:info' student.id %}">{{ student.first_name }} {{ student.last_name }} {{ student.middle_name }}</a></p>#}
         {% endfor %}
     </table>
+    <div class="text-center">
+        <button type="button" class="btn btn-default" onclick="location.href='{% url 'groups:update' group.id %}'">Update group</button>
+        <button type="button" class="btn btn-danger" onclick="location.href='{% url 'groups:delete' group.id %}'">Delete group</button>
+    </div>
+{#    </div>#}
+{#    <div class="col-md-1"></div>#}
+    </div>
+    <div class="col-md-4"></div>
     </div>
 {% endblock %}
