--- a/group/templates/update_group.html
+++ b/group/templates/update_group.html
@@ -9,9 +9,11 @@
     <div class="form-mine">
     <form method="post">{% csrf_token %}
         {% for field in form %}
-            <p>{{ field.name }}:
-                {{ field }}
-                <code>{{ field.errors }}</code></p>
+            <div class="form-group">
+                <p>{{ field.name }}:
+                    {{ field }}</p>
+                <div class="help-block with-errors">{{ field.errors }}</div>
+            </div>
         {% endfor %}
         <button type="submit" class="btn btn-success">Save</button>
     </form>
