--- a/student/templates/students_list.html
+++ b/student/templates/students_list.html
@@ -3,24 +3,25 @@
     <title>Students</title>
 {% endblock %}
 {% block body %}
+    <div class="container">
     <div class="label-mine">
         <h1>Students List</h1>
     </div>
-    <div class="basic-mine">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+{#    <div class="col-md-1"></div>#}
+{#    <div class="col-md-10">#}
     {% if object_list %}
-        <table class="table" border = "1">
-            <tr>
+        <table class="table table-bordered">
+            <tr class="warning">
                 <th>Student's id</th>
-                <th>Student's last name</th>
-                <th>Operations</th>
+                <th>Student</th>
+
             </tr>
             {% for student in object_list %}
-                <tr>
+                <tr class="active">
                     <td>{{ student.student_id }}</td>
-                    <td>{{ student.last_name }}</td>
-                    <td><button type="button" class="btn btn-info" onclick="location.href='{% url 'students:info' student.id %}'">View</button>
-                    <button type="button" class="btn btn-warning" onclick="location.href='{% url 'students:update' student.id %}'">Update</button>
-                    <button type="button" class="btn btn-danger" onclick="location.href='{% url 'students:delete' student.id %}'">Delete</button></td>
+                    <td><a href="{% url 'students:info' student.id %}">{{ student.first_name }} {{ student.last_name }} {{ student.middle_name }}</a></td>
                 </tr>
             {% endfor %}
         </table>
@@ -29,6 +30,8 @@
     {% endif %}
     <button type="button" class="btn btn-default btn-lg btn-block" onclick="location.href='{% url 'students:create' %}'">Add new student</button>
     </div>
+    </div>
+    <div class="col-md-4"></div>
 {% endblock %}
 
 
