--- a/templates/basic.html
+++ b/templates/basic.html
@@ -9,33 +9,42 @@
     <link rel="stylesheet" href={% static "core.css" %}>
 </head>
 <body>
-     <div class="container">
-        <div class="col-md-2">
-            <div class="core-mine">
-                <h4><a href='{% url 'user_profile' %}'>Profile</a></h4>
-                <h4>Students</h4>
-                <ul>
-                    <li><a href='{% url 'students:students' %}'>Students List</a></li>
-                    <li><a href='{% url 'students:create' %}'>Create Student</a></li>
-                </ul>
-                <h4>Groups</h4>
-                <ul>
-                    <li><a href='{% url 'groups:groups' %}'>Groups List</a></li>
-                    <li><a href='{% url 'groups:create' %}'>Create Group</a></li>
-                </ul>
-            </div>
+<div class="body">
+    <div class="container">
+        <div class="bs-component">
+              <nav class="navbar navbar-default">
+                  <div class="container-fluid">
+                      <div class="navbar-header">
+                          <a class="navbar-brand" href="{% url 'home_page' %}">University</a>
+                      </div>
+                      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                          <ul class="nav navbar-nav">
+                              <li><a href="{% url 'students:students' %}">Students</a></li>
+                              <li><a href="{% url 'groups:groups' %}">Groups</a></li>
+                              <li><a href="{% url 'students:create' %}">Create Student</a></li>
+                              <li><a href="{% url 'groups:create' %}">Create Group</a></li>
+                              <li><a href="{% url 'user_profile' %}">Profile</a></li>
+                          </ul>
+                          <ul class="nav navbar-nav navbar-right">
+                              <li><a href="{% url 'logout' %}">Logout</a></li>
+                          </ul>
+                      </div>
+                  </div>
+              </nav>
         </div>
-        <div class="col-md-8">
-             <div class="text-right">
-                <p class="text-muted">{{ request.user.username }} <a href="{% url 'logout' %}"><button type="button" class="btn btn-primary">Logout</button></a></p>
-             </div>
+
+        <div class="basic-mine">
             {% block body %}
             {% endblock %}
-            <div class="label-mine">
-                <p><strong><a href="{% url 'home_page' %}"><h4>Back to home page</h4></a></strong></p>
-            </div>
         </div>
-        <div class="col-md-2"></div>
+
+        <div class="bs-component">
+            <nav class="navbar navbar-default">
+                <a class="navbar-footer" href="#">reference 1</a>
+                <a class="navbar-footer" href="#">reference 2</a>
+            </nav>
+        </div>
     </div>
+</div>
 </body>
 </html>
