--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -8,32 +8,72 @@
     <link rel="stylesheet" href={% static "core.css" %}>
 </head>
 <body>
+<div class="body">
     <div class="container">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <div class="label-mine">
-                <h1>Welcome to University!</h1>
-            </div>
-                {% if request.user.username %}
-                    <div class="text-right">
-                    <p class="text-muted">You are <a href="{% url 'user_profile' %}">{{ request.user.username }}</a> <a href="{% url 'logout' %}"><button type="button" class="btn btn-primary">Logout</button></a></p>
+        {% if request.user.username %}
+        <div class="bs-component">
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="{% url 'home_page' %}">University</a>
                     </div>
-                    <div class="basic-mine">
-                    <h4>Would you like work with:</h4>
-                    <button type="button" class="btn btn-default btn-lg btn-block" onclick="location.href='{% url 'students:students' %}'">Students</button>
-                    <button type="button" class="btn btn-default btn-lg btn-block" onclick="location.href='{% url 'groups:groups' %}'">Groups</button>
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                            <li><a href="{% url 'students:students' %}">Students</a></li>
+                            <li><a href="{% url 'groups:groups' %}">Groups</a></li>
+                            <li><a href="{% url 'students:create' %}">Create Student</a></li>
+                            <li><a href="{% url 'groups:create' %}">Create Group</a></li>
+                            <li><a href="{% url 'user_profile' %}">Profile</a></li>
+                        </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="{% url 'logout' %}">Logout</a></li>
+                        </ul>
                     </div>
-                {% else %}
-                    <div class="basic-mine">
-                    <p>You are Guest. Please, <a href="{% url 'login' %}">sign in</a> or <a href="{% url 'reg' %}">sign up</a>.</p>
-                    </div>
-                {% endif %}
-
-            <div class="label-mine">
-                <p class="text-info"><strong>Have a nice day :)</strong></p>
-            </div>
+                </div>
+            </nav>
         </div>
-        <div class="col-md-2"></div>
+
+        <div class="home-mine">
+        <div class="label-mine">
+            <h1>Welcome to University!</h1>
+        </div>
+{#        {% if request.user.username %}#}
+{#                    <div class="text-right">#}
+{#                    <p class="text-muted">You are <a href="{% url 'user_profile' %}">{{ request.user.username }}</a> <a href="{% url 'logout' %}"><button type="button" class="btn btn-primary">Logout</button></a></p>#}
+{#                    </div>#}
+
+{#                <p>You are {{ request.user.username }}</p>#}
+                <h4>Would you like work with:</h4>
+                <button type="button" class="btn btn-default btn-lg btn-block" onclick="location.href='{% url 'students:students' %}'">Students</button>
+                <button type="button" class="btn btn-default btn-lg btn-block" onclick="location.href='{% url 'groups:groups' %}'">Groups</button>
+            </div>
+        {% else %}
+            <div class="bs-component">
+                <nav class="navbar navbar-default">
+                    <div class="container-fluid">
+                        <div class="navbar-header">
+                            <a class="navbar-brand" href="{% url 'home_page' %}">University</a>
+                        </div>
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav">
+                              <li><a href="{% url 'login' %}">Sign in</a></li>
+                              <li><a href="{% url 'reg' %}">Sign up</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+            <div class="home-mine">
+                  <p>You are Guest. Please, sign in or sign up.</p>
+            </div>
+        {% endif %}
+        <div class="bs-component">
+            <nav class="navbar navbar-default">
+                <a class="navbar-footer" href="#">reference 1</a>
+                <a class="navbar-footer" href="#">reference 2</a>
+            </nav>
+        </div>
     </div>
+</div>
 </body>
 </html>
