--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -6,28 +6,60 @@
     <title>Sign up</title>
     <link rel="stylesheet" href={% static "bootstrap/bootstrap.min.css" %}>
     <link rel="stylesheet" href={% static "core.css" %}>
+    <script src="bootstrap/bootstrap.min.js"></script>
 </head>
 <body>
+<div class="body">
     <div class="container">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
+        <div class="bs-component">
+                <nav class="navbar navbar-default">
+                    <div class="container-fluid">
+                        <div class="navbar-header">
+                            <a class="navbar-brand" href="{% url 'home_page' %}">University</a>
+                        </div>
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav">
+                              <li><a href="{% url 'login' %}">Sign in</a></li>
+                              <li><a href="{% url 'reg' %}">Sign up</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+        </div>
+{#        <div class="col-md-2"></div>#}
+{#        <div class="col-md-8">#}
+    <div class="basic-mine">
             <div class="label-mine">
                 <h1>Registration</h1>
             </div>
             <div class="form-mine">
-            <form method="post">{% csrf_token %}
+
+            <form method="post" role="form">{% csrf_token %}
             {% for field in form %}
-                <input class="form-control" placeholder={{ field.name }} for={{ field }}
-                <p><code>{{ field.errors }}</code></p>
+                {% if field.errors %}
+                    <div class="form-group has-error">
+                        <input class="form-control" placeholder={{ field.name }} for={{ field }}
+                        <div class="help-block with-errors">{{ field.errors }}</div>
+                    </div>
+                {% else %}
+                    <div class="form-group">
+                        <input class="form-control" placeholder={{ field.name }} for={{ field }}
+                    </div>
+                {% endif %}
             {% endfor %}
                 <button type="submit" class="btn btn-success">Save me</button>
             </form>
             </div>
-        <div class="label-mine">
-            <p><strong><a href="{% url 'home_page' %}">Back to home page</a></strong></p>
-        </div>
-        </div>
-        <div class="col-md-2"></div>
     </div>
+        <div class="bs-component">
+            <nav class="navbar navbar-default">
+                <a class="navbar-footer" href="#">reference 1</a>
+                <a class="navbar-footer" href="#">reference 2</a>
+            </nav>
+        </div>
+{#        </div>#}
+{#        <div class="col-md-2"></div>#}
+    </div>
+</div>
 </body>
 </html>
