--- a/static/core.css
+++ b/static/core.css
@@ -69,7 +69,7 @@
     margin-right: 38%;
     margin-bottom: 10%;
     margin-top: 10%;
-    text-align: center;
+    text-align: right;
 }
 
 .basic-mine{
