--- a/templates/basic.html
+++ b/templates/basic.html
@@ -38,12 +38,17 @@
             {% endblock %}
         </div>
 
-        <div class="bs-component">
-            <nav class="navbar navbar-default">
-                <a class="navbar-footer" href="#">reference 1</a>
-                <a class="navbar-footer" href="#">reference 2</a>
-            </nav>
+{#        <div class="bs-component">#}
+{#            <nav class="navbar navbar-default">#}
+{#                <a class="navbar-footer" href="#">reference 1</a>#}
+{#                <a class="navbar-footer" href="#">reference 2</a>#}
+{#            </nav>#}
+{#        </div>#}
+        <div class="footer-mine">
+            <a class="footer-mine" href="https://ua.linkedin.com/in/dianagafonova">Created by: Diana Agafonova</a>
+            <a class="footer-mine" href="https://github.com/DiankaDS/university">GitHub: university</a>
         </div>
+
     </div>
 </div>
 </body>
