--- a/static/core.css
+++ b/static/core.css
@@ -5,14 +5,15 @@
     margin-bottom: 5%;
 }
 
-.navbar-footer{
+.footer-mine{
     margin: 7.5px;
-    float: left;
     padding: 15px 15px;
     font-size: 18px;
     line-height: 20px;
     height: 50px;
     color: #c8c8c8;
+    background-color: #272b2e;
+    text-align: center;
 }
 .body{
     padding-bottom: 10%;
@@ -69,7 +70,7 @@
     margin-right: 38%;
     margin-bottom: 10%;
     margin-top: 10%;
-    text-align: right;
+    /*text-align: center;*/
 }
 
 .basic-mine{
