--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -26,8 +26,6 @@
                     </div>
                 </nav>
         </div>
-{#        <div class="col-md-2"></div>#}
-{#        <div class="col-md-8">#}
     <div class="basic-mine">
             <div class="label-mine">
                 <h1>Registration</h1>
@@ -35,30 +33,91 @@
             <div class="form-mine">
 
             <form method="post" role="form">{% csrf_token %}
-            {% for field in form %}
-                {% if field.errors %}
+                {% if form.username.errors %}
                     <div class="form-group has-error">
-                        <input class="form-control" placeholder={{ field.name }} for={{ field }}
-                        <div class="help-block with-errors">{{ field.errors }}</div>
+                        <label for="username" class="control-label">Username</label>
+                        <input class="form-control" placeholder="username" for={{ form.username }}
+                        <div class="help-block with-errors">{{ form.username.errors }}</div>
                     </div>
                 {% else %}
                     <div class="form-group">
-                        <input class="form-control" placeholder={{ field.name }} for={{ field }}
+                        <label for="username" class="control-label">Username</label>
+                        <input class="form-control" placeholder="username" for={{ form.username }}
                     </div>
                 {% endif %}
-            {% endfor %}
-                <button type="submit" class="btn btn-success">Save me</button>
+
+                <div class="form-group">
+                    <label for="first_name" class="control-label">First name</label>
+                    <input class="form-control" placeholder="first name" for={{ form.first_name }}
+                </div>
+                <div class="form-group">
+                    <label for="last_name" class="control-label">Last name</label>
+                    <input class="form-control" placeholder="last name" for={{ form.last_name }}
+                </div>
+                <div class="form-group">
+                    <label for="email" class="control-label">Email</label>
+                    <input type="email" class="form-control" placeholder="email" for={{ form.email }}
+                </div>
+                <div class="form-group">
+                    <label for="address" class="control-label">Address</label>
+                    <input class="form-control" placeholder="address" for={{ form.address }}
+                </div>
+                <div class="form-group">
+                    <label for="mobile_phone" class="control-label">Mobile phone</label>
+                    <input class="form-control" placeholder="mobile phone" for={{ form.mobile_phone }}
+                </div>
+
+                {% if form.password.errors %}
+                    <div class="form-group has-error">
+                        <label for="password" class="control-label">Password</label>
+                        <input class="form-control" placeholder="password" for={{ form.password }}
+                        <div class="help-block with-errors">{{ form.password.errors }}</div>
+                    </div>
+                {% else %}
+                    <div class="form-group">
+                        <label for="password" class="control-label">Password</label>
+                        <input class="form-control" placeholder="password" for={{ form.password }}
+                    </div>
+                {% endif %}
+                {% if form.repeat_password.errors %}
+                    <div class="form-group has-error">
+                        <label for="repeat_password" class="control-label">Repeat password</label>
+                        <input class="form-control" placeholder="password" for={{ form.repeat_password }}
+                        <div class="help-block with-errors">{{ form.repeat_password.errors }}</div>
+                    </div>
+                {% else %}
+                    <div class="form-group">
+                        <label for="repeat_password" class="control-label">Repeat password</label>
+                        <input class="form-control" placeholder="repeat password" for={{ form.repeat_password }}
+                    </div>
+                {% endif %}
+                <div class="form-group">
+                    <label for="profile_image">Photo</label>
+                    <input type="file" for={{ form.profile_image }}
+                </div>
+
+{#            {% for field in form %}#}
+{#                {% if field.errors %}#}
+{#                    <div class="form-group has-error">#}
+{#                        <input class="form-control" placeholder={{ field.name }} for={{ field }}#}
+{#                        <div class="help-block with-errors">{{ field.errors }}</div>#}
+{#                    </div>#}
+{#                {% else %}#}
+{#                    <div class="form-group">#}
+{#                        <input class="form-control" placeholder={{ field.name }} for={{ field }}#}
+{#                    </div>#}
+{#                {% endif %}#}
+{#            {% endfor %}#}
+                <div class="text-center">
+                    <button type="submit" class="btn btn-success">Save me</button>
+                </div>
             </form>
             </div>
     </div>
-        <div class="bs-component">
-            <nav class="navbar navbar-default">
-                <a class="navbar-footer" href="#">reference 1</a>
-                <a class="navbar-footer" href="#">reference 2</a>
-            </nav>
+        <div class="footer-mine">
+            <a class="footer-mine" href="https://ua.linkedin.com/in/dianagafonova">Created by: Diana Agafonova</a>
+            <a class="footer-mine" href="https://github.com/DiankaDS/university">GitHub: university</a>
         </div>
-{#        </div>#}
-{#        <div class="col-md-2"></div>#}
     </div>
 </div>
 </body>
